--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Golden Favor</title>
+  <title>Favor Saver?</title>
 </head>
 <body>
   <div id="root"></div>
