--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Favor Saver?</title>
+    <meta charset="utf-8">
+    <title>Favor Saver?</title>
 </head>
 <body>
-  <div id="root"></div>
-  <script src="bundle.js" type="text/javascript"></script>
+    <div id="root">
+    </div>
 </body>
 </html>
